--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
-<<<<<<< HEAD
-<div>Hello</div>
-<p>there</p>
-<p>people</p>
- 
-=======
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>header</title>
-</head>
-<body>
-    <h1>hello world</h1>
-</body>
-</html>
->>>>>>> main
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>header</title>
+    </head>
+    <body>
+        <h1>hello world</h1>
+    </bgitody>
+    </html>
+
